--- a/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
@@ -1,10 +1,14 @@
-﻿@model TASVideos.ViewComponents.Models.GameNameModel
+﻿@model IList<TASVideos.ViewComponents.Models.GameNameModel>
 
-@if (Model.IsSystem)
+@if (Model.Any(g => g.IsSystem))
 {
-	<span>@Model.System</span>
+	<span>@Model.First().System</span>
 }
 else
 {
-	<game-link id="Model.GameId">@Model.DisplayName</game-link>	
+	//foreach (var game in Model)
+	for (int i = 0; i < Model.Count; i++)
+	{
+		<game-link id="Model[i].GameId">@Model[i].DisplayName</game-link><span condition="i < Model.Count - 1">, </span>
+	}
 }
