--- a/TASVideos/Pages/Shared/Components/ListLanguages/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/ListLanguages/Default.cshtml
@@ -2,6 +2,8 @@
 
 @foreach (var l in Model)
 {
-	>> <a href="/@l.Path">@l.LanguageCode | @l.LanguageDisplayName</a>
-	<br />
+	<text>
+		>> <a href="/@l.Path">@l.LanguageCode | @l.LanguageDisplayName</a>
+		<br />
+	</text>
 }
