link to additional movies page

--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -17,6 +17,7 @@
 </fullrow>
 <hr />
 <label>Files:</label>
+<a permission="CreateAdditionalMovieFiles" asp-page="AdditionalMovies" class="btn btn-primary btn-sm mb-2 pull-right ml-2">Additional Movie Files</a>
 <a permission="EditPublicationFiles" asp-page="EditFile" asp-route-id="@Model.Id" class="pull-right btn btn-primary btn-sm mb-2">Edit</a>
 <table class="table table-bordered">
 	<tr>
