fix link to Forum/Posts/User on profile page

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -23,8 +23,7 @@
 					<br />
 					<label asp-for="PostCount"></label>
 					<label>
-						<a asp-page="/Forum/Posts/User"
-						   asp-route-id="@Model.UserName">
+						<a asp-page="/Forum/Posts/User" asp-route-username="@Model.UserName">
 							@Html.DisplayFor(m => m.PostCount)
 						</a>
 					</label>
