--- a/TASVideos/Pages/Forum/Topics/Index.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Index.cshtml
@@ -7,7 +7,7 @@
 <fullrow>
 	<partial name="_TopicActionBar" model="Model.Topic" />
 	<partial name="_TopicCrumbs" model="Model.Topic" />
-	<a condition="ViewData.UserHas(PermissionTo.PostInLockedTopics) 
+	<a condition="ViewData.UserHas(PermissionTo.PostInLockedTopics)
 		|| (!Model.Topic.IsLocked && ViewData.UserHas(PermissionTo.CreateForumPosts))"
 		asp-page="/Forum/Posts/Create"
 		asp-route-topicId="@Model.Id"
@@ -32,6 +32,19 @@
 {
 	<partial name="_TopicPost" model="post" />
 }
+
+<fullrow class="mt-2">
+	<partial name="_TopicActionBar" model="Model.Topic" />
+	<partial name="_TopicCrumbs" model="Model.Topic" />
+	<a condition="ViewData.UserHas(PermissionTo.PostInLockedTopics)
+		|| (!Model.Topic.IsLocked && ViewData.UserHas(PermissionTo.CreateForumPosts))"
+		asp-page="/Forum/Posts/Create"
+		asp-route-topicId="@Model.Id"
+		class="btn btn-primary btn-sm pull-right">
+		<span class="fa fa-plus"></span> Post
+	</a>
+</fullrow>
+<hr />
 <fullrow class="mt-2">
 	<partial name="_Pager" model="Model.Topic.Posts" />
 </fullrow>
