Subforum/Edit - actually save data on POST fixes #246

--- a/TASVideos/Pages/Forum/Subforum/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Edit.cshtml
@@ -4,6 +4,7 @@
 	ViewData["Title"] = $"TASVideos Forum {Model.Forum.Name}";
 }
 <partial Name="_ForumHeader" />
+<div asp-validation-summary="All" class="text-danger"></div>
 <form method="post">
 	<row>
 		<column lg="6">
