--- a/TASVideos/Pages/Wiki/Edit.cshtml
+++ b/TASVideos/Pages/Wiki/Edit.cshtml
@@ -25,7 +25,7 @@
 	</form-group>
 	<div class="text-center">
 		<button type="button" class="btn btn-secondary" id="preview-button">Preview</button>
-		<button type="submit" class="btn btn-primary">Save</button>
+		<submit-button class="btn btn-primary">Save</submit-button>
 		<a href="/@Model.Path" class="btn btn-secondary">Cancel</a>
 	</div>
 	<div class="text-center alert-info" role="alert">
