--- a/TASVideos/Pages/Forum/Posts/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Edit.cshtml
@@ -31,16 +31,21 @@
 	<input type="hidden" asp-for="Post.TopicTitle" />
 	<input type="hidden" asp-for="Post.EnableBbCode" />
 	<input type="hidden" asp-for="Post.EnableHtml" />
-	<form-group class="col-lg-6">
-		<row>
+	<row>
+		<column md="6">
 			<label asp-for="Post.Subject" class="form-control-label"></label>
 			<input type="text" asp-for="Post.Subject" class="form-control" autocomplete="off" />
 			<span asp-validation-for="Post.Subject" class="text-danger"></span>
-		</row>
-	</form-group>
-	<form-group>
+		</column>
+		<column md="6">
+			<label asp-for="Post.Mood" class="form-control-label"></label>
+			<select asp-for="Post.Mood" asp-items="@Model.Moods" class="form-control"></select>
+			<span asp-validation-for="Post.Mood" class="text-danger"></span>
+		</column>
+	</row>
+	<fullrow class="mt-3">
 		<partial name="_CreatePostHelper" model="nameof(Model.Post.Text)" />
-	</form-group>
+	</fullrow>
 	<form-group>
 		<textarea asp-for="Post.Text" class="form-control" rows="20"></textarea>
 		<span asp-validation-for="Post.Text" class="text-danger"></span>
