--- a/TASVideos/Pages/Forum/Posts/New.cshtml
+++ b/TASVideos/Pages/Forum/Posts/New.cshtml
@@ -18,59 +18,7 @@
 				<a asp-page="/Forum/Topics" asp-route-id="@post.TopicId">@post.TopicTitle</a>
 			</small>
 		</fullrow>
-		<card>
-			<cardheader>
-				<row>
-					<div class="col-4 border-right">
-						<h5>@post.PosterName</h5>
-					</div>
-					<div class="col-8 pt-0 pb-0">
-						<small style="display: inline-block">
-							<a id="@post.Id" href="/Forum/Post/@(post.Id)#@post.Id" title="Link to this post" class="pull-left"><i class="fa fa-bookmark-o"></i></a>
-							Posted: <timezone-convert asp-for="@post.CreateTimestamp" />
-							<span condition="!string.IsNullOrWhiteSpace(post.Subject)">Post subject: @post.Subject</span>
-						</small>
-					</div>
-				</row>
-			</cardheader>
-			<cardbody>
-				<row>
-					<div class="col-4">
-						<div class="card-text text-right">
-							<small>
-								@string.Join(",", post.PosterRoles)
-								(todo points)
-							</small>
-							<br />
-							<img src="@post.PosterAvatar" />
-							<br />
-							<small>
-								Joined: <timezone-convert asp-for="@post.PosterJoined" date-only="true" /><br />
-								Posts: @post.PosterPostCount<br />
-								Location: @post.PosterLocation
-							</small>
-						</div>
-					</div>
-					<div class="col-8">
-						@Html.Raw(post.RenderedText)
-					</div>
-				</row>
-			</cardbody>
-			<cardfooter>
-				<fullrow>
-					<small style="font-style: italic">@Html.Raw(post.RenderedSignature)</small>
-					<br />
-					<profile-link class="btn btn-info btn-sm" username="@post.PosterName">Profile</profile-link>
-					<a class="btn btn-secondary btn-sm" condition="User.Identity.IsAuthenticated" asp-page="/Messages/Create" asp-route-toUser="@post.PosterName">PM</a>
-					<div class="pull-right">
-						@foreach (var award in post.Awards.OrderByDescending(a => a.Year))
-						{
-							<partial name="_Award" model="award" />
-						}
-					</div>
-				</fullrow>
-			</cardfooter>
-		</card>
+		<partial name="Forum/Topics/_TopicPost" model="post" />
 	}
 	<fullrow class="mt-2">
 		<partial name="_Pager" model="Model.Posts" />
