--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -1,4 +1,4 @@
-﻿@model ForumTopicModel.ForumPostEntry
+﻿@model TASVideos.Pages.Forum.Posts.Models.ForumPostEntry
 <card class="@(Model.Highlight ? "border-info" : "")">
 	<cardheader>
 		<row>
