ability to set topic type when creating a topic

--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -15,7 +15,7 @@
 			case ForumTopicType.Sticky:
 				return "<b>Sticky: </b> " + title;
 			case ForumTopicType.Announcement:
-				return "<b>Announcement</b> " + title;
+				return "<b>Announcement: </b> " + title;
 		}
 	}
 }
