--- a/TASVideos/Pages/Forum/Topics/_TopicCrumbs.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicCrumbs.cshtml
@@ -1,8 +1,25 @@
-﻿@model IForumTopicBreadCrumb
+﻿@using TASVideos.Data.Entity.Forum
+@model IForumTopicBreadCrumb
+
+@functions {
+	string ToTitle(string title, ForumTopicType type)
+	{
+		switch (type)
+		{
+			default:
+				return title;
+			case ForumTopicType.Sticky:
+				return "<b>(Sticky) </b> " + title;
+			case ForumTopicType.Announcement:
+				return "<b>(Announcement) </b> " + title;
+		}
+	}
+}
+
 <small class="@(Model.IsLocked ? "alert alert-danger" : "") pt-1 pb-2">
 	<a asp-page="/Forum/Index">Forum</a>
 	->
 	<a asp-page="/Forum/Subforum/Index" asp-route-id="@Model.ForumId">@Model.ForumName</a>
-	-> @Model.Title
+	-> @Html.Raw(ToTitle(Model.Title, Model.Type))
 	<span condition="Model.IsLocked"> (Locked)</span>
 </small>
