--- a/TASVideos/Pages/Forum/Topics/Merge.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Merge.cshtml
@@ -1,10 +1,39 @@
 ﻿@page "{id}"
 @model MergeModel
 @{
-//ViewData["Title"] = $"Merging Topic: {Model.Topic.MergeTopicModel}";
+	ViewData["Title"] = $"Merging Topic: {Model.Topic.Title}";
 }
 <partial Name="_ForumHeader" />
-<p>Todo</p>
+<h4>
+	Merging Topic:
+	<a asp-page="/Forum/SubForum/Index" asp-route-id="@Model.Topic.ForumId">@Model.Topic.ForumName</a> ->
+	<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id">@Model.Topic.Title</a>
+</h4>
+<hr />
+
+<form method="post">
+	<row>
+		<column md="6">
+			<input type="hidden" asp-for="Topic.ForumName" />
+			<input type="hidden" asp-for="Topic.ForumId" />
+			<input type="hidden" asp-for="Topic.Title" />
+			<form-group>
+				<label asp-for="Topic.DestinationForumId"></label>
+				<select asp-for="Topic.DestinationForumId" asp-items="Model.AvailableForums.OrderBy(f => f.Text)" class="form-control"></select>
+				<span asp-validation-for="Topic.DestinationForumId" class="text-danger"></span>
+			</form-group>
+			<form-group>
+				<label asp-for="Topic.DestinationTopicId"></label>
+				<select asp-for="Topic.DestinationTopicId" asp-items="Model.AvailableTopics.OrderBy(f => f.Text)" class="form-control"></select>
+				<span asp-validation-for="Topic.DestinationTopicId" class="text-danger"></span>
+			</form-group>
+		</column>
+	</row>
+	<div class="text-center mt-2">
+		<button type="submit" class="btn btn-primary">Merge</button>
+		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+	</div>
+</form>
 
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
