--- a/TASVideos/Pages/Forum/_ForumHeader.cshtml
+++ b/TASVideos/Pages/Forum/_ForumHeader.cshtml
@@ -17,28 +17,30 @@
 		We also have an IRC channel <a href="irc://irc.freenode.net/tasvideos">#tasvideos at irc.freenode.net...</a>
 	</small>
 	<script>
-		var forumHeader = document.getElementById("forum-header");
-		var forumHeaderRestore = document.getElementById("forum-header-restore");
-		var dismissBtn = document.getElementById("forum-header-dismiss");
+		(function() {
+			var forumHeader = document.getElementById("forum-header");
+			var forumHeaderRestore = document.getElementById("forum-header-restore");
+			var dismissBtn = document.getElementById("forum-header-dismiss");
 
-		var dismiss = window.localStorage.getItem("DismissForumHeader");
-		if (dismiss !== "true") {
-			forumHeader.classList.remove("d-none");
-			forumHeaderRestore.classList.add("d-none");
-		} else {
-			forumHeaderRestore.classList.remove("d-none");
-		}
+			var dismiss = window.localStorage.getItem("DismissForumHeader");
+			if (dismiss !== "true") {
+				forumHeader.classList.remove("d-none");
+				forumHeaderRestore.classList.add("d-none");
+			} else {
+				forumHeaderRestore.classList.remove("d-none");
+			}
 
-		dismissBtn.onclick = function () {
-			window.localStorage.setItem("DismissForumHeader", true);
-			forumHeader.classList.add("d-none");
-			forumHeaderRestore.classList.remove("d-none");
-		}
+			dismissBtn.onclick = function () {
+				window.localStorage.setItem("DismissForumHeader", true);
+				forumHeader.classList.add("d-none");
+				forumHeaderRestore.classList.remove("d-none");
+			}
 
-		forumHeaderRestore.onclick = function () {
-			window.localStorage.clear('DismissForumHeader');
-			forumHeaderRestore.classList.add("d-none");
-			forumHeader.classList.remove("d-none");
-		}
+			forumHeaderRestore.onclick = function () {
+				window.localStorage.clear('DismissForumHeader');
+				forumHeaderRestore.classList.add("d-none");
+				forumHeader.classList.remove("d-none");
+			}
+		})();
 	</script>
 </info-alert>
